<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="charger"
            type="it.univaq.app.stazionidiricaricans.model.Charger" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="#ffffffff"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardMaxElevation="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/textOperator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="4dp"
                    android:text="@{charger.operator}"
                    android:textAlignment="center"
                    android:textColor="@color/green4"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp">

                    <TextView
                        android:id="@+id/labelCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/country"
                        android:textAlignment="textStart"
                        android:textColor="@color/green4"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@{charger.country}"
                        android:textAlignment="textEnd"
                        android:textColor="@color/green2"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp">

                    <TextView
                        android:id="@+id/labelTown"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/town"
                        android:textAlignment="textStart"
                        android:textColor="@color/green4"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textTown"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@{charger.town}"
                        android:textAlignment="textEnd"
                        android:textColor="@color/green2"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp">

                    <TextView
                        android:id="@+id/labelAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/address"
                        android:textAlignment="textStart"
                        android:textColor="@color/green4"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@{charger.address}"
                        android:textAlignment="textEnd"
                        android:textColor="@color/green2"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp">

                    <TextView
                        android:id="@+id/labelUsageType"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/usage_type"
                        android:textAlignment="textStart"
                        android:textColor="@color/green4"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textUsageType"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@{charger.usageType}"
                        android:textAlignment="textEnd"
                        android:textColor="@color/green2"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp">

                    <TextView
                        android:id="@+id/labelUsageCost"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/usage_cost"
                        android:textAlignment="textStart"
                        android:textColor="@color/green4"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textUsageCost"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@{charger.usageCost}"
                        android:textAlignment="textEnd"
                        android:textColor="@color/green2"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp">

                    <TextView
                        android:id="@+id/labelStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/status"
                        android:textAlignment="textStart"
                        android:textColor="@color/green4"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@{charger.status}"
                        android:textAlignment="textEnd"
                        android:textColor="@color/green2"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent" />

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>